test/sema/typeck/enum/match-params-duplicate.dora
enum A { V1(Int32, Int32), V2 }
fn f(x: A): Int32 {
    match x {
        A::V1(a, a) => a + a,
        A::V2 => 1i32
    }
}
